--- a/blog/templates/account.html
+++ b/blog/templates/account.html
@@ -1,5 +1,11 @@
+<style>
+  #account{
+    color: #c7ca11;
+  }</style>
+
 {% extends 'layout.html' %}
 {% block content %}
+
 <div class="content-section">
         <div class="media">
           <img class="rounded-circle account-img" src="{{ image_file }}">
