--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -1,3 +1,9 @@
+<style>
+    #login{
+      color: #c7ca11;
+    }</style>
+  
+
 {% extends 'layout.html' %}
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
