--- a/blog/templates/new_post.html
+++ b/blog/templates/new_post.html
@@ -1,3 +1,8 @@
+<style>
+#new{
+    color: #c7ca11;
+  }
+</style>
 {% extends 'layout.html' %}
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
