--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -26,18 +26,18 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{{url_for('main.index')}}">Home</a>
-                    <a class="nav-item nav-link" href="{{url_for('main.about')}}">About</a>
+                    <a class="nav-item nav-link" id="home" href="{{url_for('main.index')}}">Home</a>
+                    <a class="nav-item nav-link" id="about" href="{{url_for('main.about')}}">About</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if current_user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{{url_for('posts.new_post')}}">Nuovo Post</a>
-                        <a class="nav-item nav-link" href="{{url_for('users.account')}}">Account</a>
+                        <a class="nav-item nav-link" id="new" href="{{url_for('posts.new_post')}}">Nuovo Post</a>
+                        <a class="nav-item nav-link" id="account" href="{{url_for('users.account')}}">Account</a>
                         <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Logout</a>
                         {% else %}
-                        <a class="nav-item nav-link" href="{{url_for('users.login')}}">Login</a>
-                        <a class="nav-item nav-link" href="{{url_for('users.register')}}">Register</a>
+                        <a class="nav-item nav-link" id="login" href="{{url_for('users.login')}}">Login</a>
+                        <a class="nav-item nav-link" id="register" href="{{url_for('users.register')}}">Register</a>
                         {% endif %}
                     </div>
                 </div>
@@ -59,11 +59,12 @@
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.
                 <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
+                <li class="list-group-item list-group-item-light"><a href="{{url_for('main.top_posts')}}">Più Votati</a></li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
                 <li class="list-group-item list-group-item-light">Calendars</li>
                 <li class="list-group-item list-group-item-light">etc</li>
                 </ul>
+                
             </p>
             </div>
         </div>
@@ -75,5 +76,12 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </body>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  
+    <!-- Carica il nostro componente React. -->
+    <script src="/blog/static/bottone_like.js"></script>   
+
+
+</body>
 </html>
