--- a/blog/templates/top.html
+++ b/blog/templates/top.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-{% for post in posts.items %}
+{% for post in posts %}
 <article class="media content-section">
     <img class='profpic rounded-circle article-img' src='{{ url_for("static", filename="profile_pic/"+post.author.image_file) }}'>
     <div class="media-body">
@@ -31,43 +31,5 @@
         <div id="contenitore_bottone_like"></div>
     </div>
 </article>
-{% if post.author == current_user %}
-
-<!-- Modal -->
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="deleteModalLabel">Elimina Post</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            </div>
-            <div class="modal-body">
-            Vuoi eliminare il post?    
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="button" data-dismiss="modal">Chiudi</button>
-                <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
-                    <input class="btn btn-danger" type="submit" value="Elimina">
-                </form>
-            </div>
-      </div>
-    </div>
-</div>
-{% endif %}
-
 {% endfor %}
-{% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-    {% if page_num %}
-    {% if posts.page == page_num %}
-    <a class="btn btn-info mb-4" href="{{url_for('main.index', page=page_num)}}">{{page_num}}</a>
-        {%else%}
-    <a class="btn btn-outline-info mb-4" href="{{url_for('main.index', page=page_num)}}">{{page_num}}</a>
-        {%endif%}
-    {%else%}
-    ...
-    {%endif%}
-{% endfor %}
-
 {% endblock %}
