--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,10 +1,8 @@
-<style>
-#about{
-    color: #c7ca11;
-}
-</style>
+
 {% extends 'layout.html' %}
 {% block content %}
+<style>#about{color: #c7ca11;}</style>
+
 <h1> About </h1>
-<p>Porco porco porco porco</p>
+<p>Blog realized by Mirko Torrisi using Flask and Bootstrap</p>
 {% endblock %}
