--- a/blog/templates/new_post.html
+++ b/blog/templates/new_post.html
@@ -7,7 +7,7 @@
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
 
-<legend class="border-bottom mb-4">{{ legend }}</legend>
+<legend class="border-bottom mb-4"><h5>{{ legend }}</h5></legend>
 
 <form method="POST" action="" role="form" enctype="multipart/form-data">
 
