--- a/blog/templates/account.html
+++ b/blog/templates/account.html
@@ -1,10 +1,7 @@
-<style>
-  #account{
-    color: #c7ca11;
-  }</style>
 
 {% extends 'layout.html' %}
 {% block content %}
+<style>#account{color: #c7ca11;}</style>
 
 <div class="content-section">
         <div class="media">
