--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+
         {% if title %}
         <title>
             {{title}}
@@ -15,22 +16,18 @@
         {% endif %}
     </head>
     <body>
-
         <header class="site-header">
             <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-
                 <div class="container">
                 <a class="navbar-brand mr-4" href="/">Blog di Mirko</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
-                    <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" id="home" href="{{url_for('main.index')}}">Home</a>
-                    <a class="nav-item nav-link" id="about" href="{{url_for('main.about')}}">About</a>
-                    </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
+                        <a class="nav-item nav-link" id="home" href="{{url_for('main.index')}}">Home</a>
+                        <a class="nav-item nav-link" id="about" href="{{url_for('main.about')}}">About</a>
                         {% if current_user.is_authenticated %}
                         <a class="nav-item nav-link" id="new" href="{{url_for('posts.new_post')}}">Nuovo Post</a>
                         <a class="nav-item nav-link" id="account" href="{{url_for('users.account')}}">Account</a>
@@ -42,25 +39,24 @@
                     </div>
                 </div>
                 </div>
+                </div>
             </nav>
         </header>
 
     <main role="main" class="container">
         {% include "_flashmessages.html" %}
         <div class="row">
-                
-
         <div class="col-md-8">
             {% block content %}
             {% endblock %}
         </div>
         <div class="col-md-4">
             <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
+            <h3>I migliori post</h3>
+            <p class='text-muted'>
                 <ul class="list-group">
                 <li class="list-group-item list-group-item-light"><a href="{{url_for('main.top_posts')}}">Più Votati</a></li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
+                <li class="list-group-item list-group-item-light"><a href="{{url_for('main.most_commented')}}">Più Commentati</a></li>
                 <li class="list-group-item list-group-item-light">Calendars</li>
                 <li class="list-group-item list-group-item-light">etc</li>
                 </ul>
