--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -1,12 +1,7 @@
-<style>
-    #login{
-      color: #c7ca11;
-    }</style>
-  
-
 {% extends 'layout.html' %}
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
+<style>#login{color: #c7ca11;}</style>
 
 <form method="POST" action="{{url_for('users.login')}}" role="form">
 
