--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
+<style>#register{color: #c7ca11;}</style>
 
 <form method="POST" action="{{url_for('.register')}}" role="form">
 
