--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -76,7 +76,7 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   
     <!-- Carica il nostro componente React. -->
-    <script src="/blog/static/bottone_like.js"></script>   
+    <script src="../static/bottone_like.js"></script>  
 
 
 </body>
