--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -12,6 +12,7 @@
         </div>
         <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
         <p class="article-content">{{ post.content }}</p>
+        <div id="contenitore_bottone_like"></div>
 
         <div id="likes" class="col-md-6 col-12 col-lg-3 float-right border-top d-flex-column">
             <div class="mr-auto p-2"><a class="border-bottom text-right" href="{{ url_for('posts.post', post_id=post.id) }}" id="comments" class="text-right">{{ post.comments.count() }} commenti</a></div>
