--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,75 +1,93 @@
 {% extends 'layout.html' %}
 {% block content %}
-<style>#home{color: #c7ca11;}</style>
+<style>
+    #home {
+        color: #c7ca11;
+    }
+</style>
 
-{% for post in posts.items %}
-<article class="media content-section">
-    <img class='profpic rounded-circle article-img' src='{{ url_for("static", filename="profile_pic/"+post.author.image_file) }}'>
-    <div class="media-body">
-        <div class="article-metadata">
-        <a class="mr-2" href="{{ url_for('users.user_posts', username=post.author.username)}}">{{ post.author.username }}</a>
-        <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
-        </div>
-        <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
-        <p class="article-content">{{ post.content }}</p>
-        <div id="contenitore_bottone_like"></div>
+{% for post in posts %}
+{% if post.end_near %}
+<h5 id="scadenza">{{ post.nome }}</h5>
 
-        <div id="likes" class="col-md-6 col-12 col-lg-3 float-right border-top d-flex-column">
-            <div class="mr-auto p-2"><a class="border-bottom text-right" href="{{ url_for('posts.post', post_id=post.id) }}" id="comments" class="text-right">{{ post.comments.count() }} commenti</a></div>
-        {% if current_user.is_authenticated %}
-        {% if current_user.has_liked_post(post) %}
-        <a class="" href="{{ url_for('users.like_action', post_id=post.id, action='unlike') }}"><img id="cuore" src="http://www.transparentpng.com/thumb/instagram-heart/2pLraG-instagram-heart-emoji-free-download-transparent.png" alt="Instagram Heart Emoji Free Download Transparent @transparentpng.com"></a>
-        {% else %}
-        <a class="" href="{{ url_for('users.like_action', post_id=post.id, action='like') }}"><img id="cuore" src="http://www.transparentpng.com/thumb/instagram-heart/4iIo2U-instagram-heart-simple.png" alt="Instagram Heart Simple @transparentpng.com"></a>
-        {% endif %}
-        {% endif %}
-        <small>{{ post.likes.count() }} mi piace</small>
-        </div>
-        {% if post.author == current_user %}
-        <div>
-            <a class="btn button" href="{{url_for('posts.update_post', post_id=post.id)}}">Modifica</a>
-            <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Elimina</button>
-        </div> 
-        {% endif %}
+<div class="media content-section bg-warning">
+    <table class="table">
+        <thead>
+            <th scope="col">scadenza</th>
+            <th scope="col">cellulare</th>
+            <th scope="col">quota</th>
+            <th scope="col">versato</th>
+            <th scope="col">note</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="table-content">{{ post.scadenza.strftime('%d-%m-%Y') }}
+                <td class="table-content">{{ post.cell }}</td>
+                <td class="table-content">{{ post.quota }}</td>
+                <td class="table-content">{{ post.versato }}</td>
+                <td class="table-content">{{ post.note }}</td>
+            </tr>
+        </tbody>
+    </table>
+    <div>
+        <a class="btn button" href="{{url_for('posts.update_post', id=post.id)}}">Modifica</a>
+        <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal"
+            data-target="#deleteModal">Elimina</button>
     </div>
-</article>
-{% if post.author == current_user %}
+</div>
+{% else %}
+<h5>{{ post.nome }}</h5>
 
-<!-- Modal -->
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="deleteModalLabel">Elimina Post</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            </div>
-            <div class="modal-body">
-            Vuoi eliminare il post?    
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="button" data-dismiss="modal">Chiudi</button>
-                <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
-                    <input class="btn btn-danger" type="submit" value="Elimina">
-                </form>
-            </div>
-      </div>
+<div class="media content-section">
+    <table class="table">
+        <thead>
+            <th scope="col">scadenza</th>
+            <th scope="col">cellulare</th>
+            <th scope="col">quota</th>
+            <th scope="col">versato</th>
+            <th scope="col">note</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="table-content">{{ post.scadenza.strftime('%d-%m-%Y') }}
+                <td class="table-content">{{ post.cell }}</td>
+                <td class="table-content">{{ post.quota }}</td>
+                <td class="table-content">{{ post.versato }}</td>
+                <td class="table-content">{{ post.note }}</td>
+            </tr>
+        </tbody>
+    </table>
+    <div>
+        <a class="btn button" href="{{url_for('posts.update_post', id=post.id)}}">Modifica</a>
+        <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal"
+            data-target="#deleteModal">Elimina</button>
     </div>
 </div>
 {% endif %}
 
-{% endfor %}
-{% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-    {% if page_num %}
-    {% if posts.page == page_num %}
-    <a class="btn btn-info mb-4" href="{{url_for('main.index', page=page_num)}}">{{page_num}}</a>
-        {%else%}
-    <a class="btn btn-outline-info mb-4" href="{{url_for('main.index', page=page_num)}}">{{page_num}}</a>
-        {%endif%}
-    {%else%}
-    ...
-    {%endif%}
-{% endfor %}
+<!-- Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Elimina Socio</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Vuoi eliminare il socio?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="button" data-dismiss="modal">Chiudi</button>
+                <form action="{{ url_for('posts.delete_post', id=post.id) }}" method="POST">
+                    <input class="btn btn-danger" type="submit" value="Elimina">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
+{% endfor %}
 {% endblock %}
