--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
-        {% if title %}
-        <title>
-            {{title}}
-        </title>
-        {% endif %}
-    </head>
-    <body>
-        <header class="site-header">
-            <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-                <div class="container">
-                <a class="navbar-brand mr-4" href="/">Blog di Mirko</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+    {% if title %}
+    <title>
+        {{title}}
+    </title>
+    {% endif %}
+</head>
+
+<body>
+    <header class="site-header">
+        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+            <div class="container">
+                <a class="navbar-brand mr-4" href="/">ASD Blue Angels</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+                    aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" id="home" href="{{url_for('main.index')}}">Home</a>
-                        <a class="nav-item nav-link" id="about" href="{{url_for('main.about')}}">About</a>
                         {% if current_user.is_authenticated %}
-                        <a class="nav-item nav-link" id="new" href="{{url_for('posts.new_post')}}">Nuovo Post</a>
-                        <a class="nav-item nav-link" id="account" href="{{url_for('users.account')}}">Account</a>
+                        <a class="nav-item nav-link" id="new" href="{{url_for('posts.new_post')}}">Nuovo Socio</a>
                         <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Logout</a>
                         {% else %}
                         <a class="nav-item nav-link" id="login" href="{{url_for('users.login')}}">Login</a>
@@ -38,46 +40,34 @@
                         {% endif %}
                     </div>
                 </div>
-                </div>
-                </div>
-            </nav>
-        </header>
+            </div>
+            </div>
+        </nav>
+    </header>
 
     <main role="main" class="container">
         {% include "_flashmessages.html" %}
         <div class="row">
-        <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
-        </div>
-        <div class="col-md-4">
-            <div class="content-section">
-            <h3>I migliori post</h3>
-            <p class='text-muted'>
-                <ul class="list-group">
-                <li class="list-group-item list-group-item-light"><a href="{{url_for('main.top_posts')}}">Più Votati</a></li>
-                <li class="list-group-item list-group-item-light"><a href="{{url_for('main.most_commented')}}">Più Commentati</a></li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-                </ul>
-                
-            </p>
+            <div class="col-md-12">
+                {% block content %}
+                {% endblock %}
             </div>
         </div>
-        </div>
     </main>
-        
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-  
-    <!-- Carica il nostro componente React. -->
-    <script src="../static/bottone_like.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 
 </body>
+
 </html>
