--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -10,7 +10,7 @@
 {% if post.end_near %}
 <h5 id="scadenza">{{ post.nome }}</h5>
 
-<div class="media content-section bg-warning">
+<div class="content-section bg-warning">
     <table class="table">
         <thead>
             <th scope="col">scadenza</th>
@@ -38,7 +38,7 @@
 {% else %}
 <h5>{{ post.nome }}</h5>
 
-<div class="media content-section">
+<div class="content-section">
     <table class="table">
         <thead>
             <th scope="col">scadenza</th>
