--- a/blog/static/main.css
+++ b/blog/static/main.css
@@ -1,3 +1,7 @@
+
+@media (max-width: @screen-sm) {
+  body{font-size: 8px;}
+}
 ::selection {
   background-color: rgb(57, 87, 88);
   color: rgb(255, 255, 255)
