--- a/blog/static/main.css
+++ b/blog/static/main.css
@@ -49,10 +49,10 @@
  }
   .content-section {
     background: #ffffff;
-    padding: 10px 20px;
+    padding: 2% 2%;
     border: 1px solid #dddddd;
     border-radius: 3px;
-    margin-bottom: 20px;
+    margin-bottom: 2%;
   }
   
   .form-control{
