--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -46,7 +46,7 @@
     <main role="main" class="container">
         {% include "_flashmessages.html" %}
         <div class="row">
-            <div class="col-md-12">
+            <div class="col">
                 {% block content %}
                 {% endblock %}
             </div>
